--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "_redirects",
+              "src/_redirects",
               "src/favicon.ico",
               "src/assets"
             ],
